--- a/ch02/wasmcheckers/index.html
+++ b/ch02/wasmcheckers/index.html
@@ -10,6 +10,6 @@
     </head>
     <body>
         <span id="container"></span>
-        <script src="./func_test.js"></script>
+        <script src="./index.js"></script>
     </body>
 </html>
